[project]
name = "netology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.36.0",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
]
